switch build-xml to java 11 and drop java 9 support, see #17858
git-svn-id: https://josm.openstreetmap.de/svn/trunk@19044 0c6e7542-c601-0410-84e7-c038aed88b3b